resolved cities isseus

--- a/config/development.sphinx.conf
+++ b/config/development.sphinx.conf
@@ -6,9 +6,9 @@ searchd
 {
   address = 127.0.0.1
   port = 9313
-  log = /home/ketan/rails_project/ralph_work/repo/invitar_repo/log/searchd.log
-  query_log = /home/ketan/rails_project/ralph_work/repo/invitar_repo/log/searchd.query.log
-  pid_file = /home/ketan/rails_project/ralph_work/repo/invitar_repo/log/searchd.development.pid
+  log = /home/invitar_work/invitor/log/searchd.log
+  query_log = /home/invitar_work/invitor/log/searchd.query.log
+  pid_file = /home/invitar_work/invitor/log/searchd.development.pid
 }
 
 source company_core_0
@@ -17,7 +17,7 @@ source company_core_0
   sql_host = localhost
   sql_user = root
   sql_pass = root
-  sql_db = invitar_development_new
+  sql_db = invitar_new_dev
   sql_query_pre = UPDATE `companies` SET `delta` = 0 WHERE `delta` = 1
   sql_query_pre = SET NAMES utf8
   sql_query_pre = SET TIME_ZONE = '+0:00'
@@ -37,7 +37,7 @@ source company_core_0
 index company_core
 {
   source = company_core_0
-  path = /home/ketan/rails_project/ralph_work/repo/invitar_repo/db/sphinx/development/company_core
+  path = /home/invitar_work/invitor/db/sphinx/development/company_core
   morphology = stem_en
   charset_type = utf-8
 }
@@ -48,7 +48,7 @@ source company_delta_0 : company_core_0
   sql_host = localhost
   sql_user = root
   sql_pass = root
-  sql_db = invitar_development_new
+  sql_db = invitar_new_dev
   sql_query_pre = 
   sql_query_pre = SET NAMES utf8
   sql_query_pre = SET TIME_ZONE = '+0:00'
@@ -68,7 +68,7 @@ source company_delta_0 : company_core_0
 index company_delta : company_core
 {
   source = company_delta_0
-  path = /home/ketan/rails_project/ralph_work/repo/invitar_repo/db/sphinx/development/company_delta
+  path = /home/invitar_work/invitor/db/sphinx/development/company_delta
 }
 
 index company
